[+] Administration > Paramètres > Configuration Avancée: ajout champ "Emplacement du fichier css personnel pour customisation de l'interface d'administration (option)"
[+] classe plxPlugin: ajout de la méthode delParam (contribution jormun)
[+] plxShow::artChapo() : ajout du paramètre optionnel anchor (contribution jerrywham)
BUG fix #77: fct artFeed: lien rss pour les catégories incomplet
BUG Correction d'une possible auth-bypass (contribution jvoisin)
BUG Prise en compte des liens en // dans la réécriture d'url

## PLUXML 5.3.1 (sortie : 13/03/2014) ##

[+] plxAdmin::delArticle: ajout du hook plxAdminDelArticle
[+] Administration > Nouvel article: ajout de l'attribut id="id_cal" à la balise <a> de l'icone du calendrier
BUG fix #46: Paramètre display_empty_cat non initialisé dans install.php
BUG fix #48: Erreur de parenthèse dans plxFeed sur instruction utf8_decode
BUG fix #53: plxShow::staticList : variable #static_class non traitée (contribution ReSpAwN)
BUG fix #54: Ajout commentaire: mauvais controle existence fichier (contribution rockyhorror)
BUG fix #55: Duplicate content avec page statique en page d'accueil (contribution Ethno Urban)
BUG fix #56: Mauvais tri alpha des tags avec des accents
BUG fix #57: Mauvais tri des répertoires dans le gestionnaire de médias (contribution rockyhorror)
BUG Mauvais chargement des fichiers de langues. Impact sur les plugins
Thème par défaut
- problème formatage balise <pre>
- affichage la sidebar sur la page d'erreur
- fix #45 problème balise blockquote
- fix #47 erreur format html5 balise <time>

## PLUXML 5.3 (sortie : 08/01/2014) ##

[+] Affichage du titre du site après le nom de la catégorie dans la balise <title> (amélioration du référencement)
[+] Administration: ajout d'un message de confirmation avant les suppressions en masse
[+] Administration: ajout d'un favicon
[+] Administration > Pages statiques: possibilité d'ajouter des urls internes commençant par le caractère ?